tests/snapshots/parse_pipeline__snapshot_pipeline_timeseries_with_facet.snap
---
source: tests/parse_pipeline.rs
expression: ast
---
Pipeline:
  stages:
    - From: Traces
    - Select:
        - Aggregation:
            function: Avg
            args:
              - Field: duration
    - Timeseries:
        interval:
          raw_value: 1
          unit: min
          si_value: 60
          si_unit: s
    - Facet:
        dimension: action_name
    - Since:
        Since:
          Relative:
            amount: 1
            unit: hour
