tests/snapshots/parse_pipeline__snapshot_pipeline_with_limit.snap
---
source: tests/parse_pipeline.rs
expression: ast
---
Pipeline:
  stages:
    - From: Logs
    - Where:
        Comparison:
          left:
            Field: ros.node
          op: Eq
          right:
            Literal:
              String: /planner
    - OrderBy:
        field: duration
        direction: Desc
    - Limit: 20
